# DiscordBot

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  Makefile  README.md  RunTests.yml  docker-compose.test.yml  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: RunTests.yml
discord_bot/: __main__.py
discord_bot/cogs/: weather.py
discord_bot/cogs/weather/: __init__.py  weather.py
discord_bot/cogs/weather/models/: users.py
discord_bot/cogs/weather/utils/: users.py  weather.py
discord_bot/models/: users.py
tests/: fake_responses.py  test_discord_bot.py  test_services.py  test_weather_cog_services.py
