[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["Bruce Olivier <bolivierjr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "1.7.3"
peewee = "3.13.1"
requests = "2.22.0"
marshmallow = "3.3.0"
python-dotenv = "0.10.3"
cachetools = "4.0.0"
pre-commit = "1.20.0"

[tool.poetry.dev-dependencies]
pytest = "5.2"
flake8 = "3.7.9"
black = "19.10b0"
isort = "5.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
